--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
         <a href={% url 'core:supplier_list' %}>Proveedores</a>
         
       </li>
+      <li>
+         <a href={% url 'core:category_list' %}>Categorias</a>
+      </li>
     </ul>
    </nav>
   </header>
