CSS base - nav - icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href={% static 'css/components/table.css' %}>
   <link rel="stylesheet" href={% static 'css/components/button.css' %}>
   <link rel="stylesheet" href={% static 'css/components/form.css' %}>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>{% block title %}{% endblock title %} - TeacherCode</title>
 </head>
 <body>
@@ -26,6 +27,6 @@
   <footer id="footer">
     {% include 'partials/footer.html' %}
   </footer>
-  
+
 </body>
 </html>
