--- a/templates/partials/navigation.html
+++ b/templates/partials/navigation.html
@@ -1,17 +1,17 @@
 <ul class="menu">
   <li>
-    <a href={% url 'home' %}>Inicio</a>
+    <a href="{% url 'home' %}"><i class="fas fa-home"></i> Inicio</a>
   </li>
   <li>
-    <a href={% url 'core:product_list' %}>Productos</a>
+    <a href="{% url 'core:product_list' %}"><i class="fas fa-box-open"></i> Productos</a>
   </li>
   <li>
-    <a href={% url 'core:brand_list' %}>Marcas</a>
+    <a href="{% url 'core:brand_list' %}"><i class="fas fa-tags"></i> Marcas</a>
   </li>
   <li>
-    <a href={% url 'core:supplier_list' %}>Proveedores</a>
+    <a href="{% url 'core:supplier_list' %}"><i class="fas fa-truck"></i> Proveedores</a>
   </li>
   <li>
-    <a href={% url 'core:category_list' %}>Categorías</a>
+    <a href="{% url 'core:category_list' %}"><i class="fas fa-list"></i> Categorías</a>
   </li>
 </ul>
