--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,1 +1,12 @@
-<p>&copy; {{ year }} TeacherCode. Todos los derechos reservados.</p>
+<footer id="footer">
+  <div class="container">
+    <div class="footer-content">
+      <a href="https://github.com/fborjaz" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-github"></i> Frank Borja
+      </a>
+      <p>&copy; {{ year }} Todos los derechos reservados.</p>
+      <nav class="footer-links">
+      </nav>
+    </div>
+  </div>
+</footer>
