--- a/templates/partials/navigation.html
+++ b/templates/partials/navigation.html
@@ -3,15 +3,15 @@
     <a href="{% url 'home' %}"><i class="fas fa-home"></i> Inicio</a>
   </li>
   <li>
-    <a href="{% url 'core:product_list' %}"><i class="fas fa-box-open"></i> Productos</a>
+    <a href="{% url 'core:product_list' %}"><i class="fas fa-box-open" aria-hidden="true"></i> Productos</a>
   </li>
   <li>
-    <a href="{% url 'core:brand_list' %}"><i class="fas fa-tags"></i> Marcas</a>
+    <a href="{% url 'core:brand_list' %}"><i class="fas fa-tags" aria-hidden="true"></i> Marcas</a>
   </li>
   <li>
-    <a href="{% url 'core:supplier_list' %}"><i class="fas fa-truck"></i> Proveedores</a>
+    <a href="{% url 'core:supplier_list' %}"><i class="fas fa-truck" aria-hidden="true"></i> Proveedores</a>
   </li>
   <li>
-    <a href="{% url 'core:category_list' %}"><i class="fas fa-list"></i> Categorías</a>
+    <a href="{% url 'core:category_list' %}"><i class="fas fa-list" aria-hidden="true"></i> Categorías</a>
   </li>
 </ul>
