--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,13 +2,12 @@
   --primary-color: #212121;        /* Gris oscuro (fondo principal) */
   --secondary-color: #333333;     /* Gris medio (fondo secundario) */
   --accent-color: #12c064;        /* Verde (acentos y enlaces) */
-  --text-color: #ffffff;           /* Blanco (texto principal) */
+  --text-color: #f2f2f2;           /* Blanco (texto principal) */
   --text-secondary-color: #aaaaaa; /* Gris claro (texto secundario) */
   --title-font: 'Roboto', sans-serif;   /* Fuente para títulos (sans-serif minimalista) */
   --body-font: 'Roboto', sans-serif;   /* Fuente para texto (sans-serif minimalista) */
 }
 
-/* Estilos generales */
 body {
   font-family: var(--body-font);
   line-height: 1.6;
@@ -18,38 +17,47 @@ body {
   color: var(--text-color);
 }
 
-/* Tipografía */
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--title-font);
   margin-top: 0;
-  color: var(--text-color); /* Títulos en blanco */
+  color: var(--text-color);
 }
 
-h1 { font-size: 2.5rem; }
-h2 { font-size: 2rem; }
-h3 { font-size: 1.75rem; }
-h4 { font-size: 1.5rem; }
-h5 { font-size: 1.25rem; }
-h6 { font-size: 1rem; }
+h1 {
+  font-size: 2.5rem;
+}
+h2 {
+  font-size: 2rem;
+}
+h3 {
+  font-size: 1.75rem;
+}
+h4 {
+  font-size: 1.5rem;
+}
+h5 {
+  font-size: 1.25rem;
+}
+h6 {
+  font-size: 1rem;
+}
 
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  color: var(--text-secondary-color); /* Texto de párrafo en gris claro */
+  color: var(--text-secondary-color);
 }
 
-/* Enlaces */
 a {
-  color: var(--accent-color); /* Enlaces en verde */
+  color: var(--accent-color);
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 a:hover {
-  color: lighten(var(--accent-color), 10%); /* Enlaces más claros al pasar el mouse */
+  color: lighten(var(--accent-color), 10%);
 }
 
-/* Contenedor principal */
 .container {
   max-width: 960px;
   margin: 0 auto;
