--- a/static/css/layout/navigation.css
+++ b/static/css/layout/navigation.css
@@ -1,41 +1,30 @@
-/* Menú de navegación */
 .menu {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: center; /* Centra los elementos horizontalmente */
+  justify-content: center;
 }
 
 .menu li {
-  margin: 0 1rem; /* Espacio uniforme entre elementos */
+  margin: 0 1rem;
 }
 
 .menu a {
-  display: block; /* Ocupa todo el ancho del elemento li */
-  padding: 0.8rem 1.2rem; /* Aumenta el área de clic */
-  color: var(--text-color); /* Texto en blanco */
+  display: block;
+  padding: 0.8rem 1.2rem;
+  color: var(--text-color);
   text-decoration: none;
-  font-weight: 500;  /* Texto semibold */
-  border-radius: 5px; /* Bordes redondeados */
-  transition: background-color 0.3s ease, color 0.3s ease; /* Transiciones suaves */
-}
-
-.menu li a {
-  display: flex;   /* Permite alinear elementos en línea */
-  align-items: center; /* Alinea verticalmente el icono y el texto */
-}
-
-.menu li a i {
-  margin-right: 0.5rem; /* Espacio entre el icono y el texto */
+  font-weight: 500;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .menu a:hover {
-  background-color: var(--accent-color); /* Fondo verde al pasar el mouse */
-  color: var(--primary-color); /* Texto gris oscuro al pasar el mouse */
+  background-color: var(--accent-color);
+  color: var(--primary-color);
 }
 
-/* Estilo para el enlace activo */
 .menu .active a {
   background-color: var(--accent-color);
   color: var(--primary-color);
