--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href={% static 'css/components/form.css' %}>
   <link rel="stylesheet" href={% static 'css/components/footer.css' %}>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <title>{% block title %}{% endblock title %} - TeacherCode</title>
+  <title>{% block title %}{% endblock title %} - Home</title>
 </head>
 <body>
 
