--- a/static/css/layout/header.css
+++ b/static/css/layout/header.css
@@ -3,11 +3,16 @@
   color: white;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 .logo {
   font-size: 1.5em;
   font-weight: bold;
+}
+
+nav {
+  display: flex;
+  align-items: center;
 }
