--- a/static/css/layout/navigation.css
+++ b/static/css/layout/navigation.css
@@ -1,23 +1,32 @@
+/* Menú de navegación */
 .menu {
   list-style: none;
   padding: 0;
   margin: 0;
   display: flex;
   justify-content: center;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: var(--secondary-color);
 }
 
 .menu li {
-  margin: 0 1rem;
+  margin: 0;
 }
 
 .menu a {
-  display: block;
-  padding: 0.8rem 1.2rem;
+  display: flex; /* Permite alinear el icono y el texto */
+  align-items: center; /* Alinea verticalmente el icono y el texto */
+  padding: 1rem 1.5rem;
   color: var(--text-color);
   text-decoration: none;
   font-weight: 500;
-  border-radius: 5px;
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* Iconos */
+.menu a i {
+  margin-right: 0.5rem; /* Espacio entre el icono y el texto */
 }
 
 .menu a:hover {
@@ -25,7 +34,18 @@
   color: var(--primary-color);
 }
 
+/* Estilo para el enlace activo */
 .menu .active a {
+  position: relative; /* Para posicionar la línea debajo */
+  color: var(--accent-color);
+}
+
+.menu .active a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
   background-color: var(--accent-color);
-  color: var(--primary-color);
 }
