--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,18 @@
   {% load static %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS Base -->
+  <link rel="stylesheet" href={% static 'css/base.css' %}>
+  <!-- layout -->
   <link rel="stylesheet" href={% static 'css/layout/header.css' %}>
   <link rel="stylesheet" href={% static 'css/layout/navigation.css' %}>
-  <link rel="stylesheet" href={% static 'css/base.css' %}>
+  <!-- components -->
   <link rel="stylesheet" href={% static 'css/components/table.css' %}>
   <link rel="stylesheet" href={% static 'css/components/button.css' %}>
   <link rel="stylesheet" href={% static 'css/components/form.css' %}>
   <link rel="stylesheet" href={% static 'css/components/footer.css' %}>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Iconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>{% block title %}{% endblock title %} - Home</title>
 </head>
 <body>
