--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,6 +42,18 @@ h6 {
   font-size: 1rem;
 }
 
+.title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  background: linear-gradient(to right, var(--accent-color), #007bff); /* Degradado de verde a azul */
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
