--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>Signup</h1>
 
-</body>
-</html>
+<form action="/signup/" method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+
+    <button>
+        Signup
+    </button>
+
+</form>
