--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,4 +1,4 @@
-<span class="logo"></span>
+<span class="logo"><i class="fas fa-shopping-cart"></i></span>
 <nav>
   {% include 'partials/navigation.html' %}
 </nav>
