--- a/static/css/layout/navigation.css
+++ b/static/css/layout/navigation.css
@@ -34,6 +34,11 @@
   color: var(--primary-color);
 }
 
+.menu .active a {
+    background-color: var(--accent-color); /* Cambiar el color de fondo del enlace activo */
+    color: white;                         /* Cambiar el color del texto */
+}
+
 /* Estilo para el enlace activo */
 .menu .active a {
   position: relative; /* Para posicionar la línea debajo */
