--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href={% static 'css/components/footer.css' %}>
   <!-- Iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<!-- Favicon -->
+  <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
   <title>{% block title %}{% endblock title %} - Home</title>
 </head>
 <body>
