--- a/templates/core/products/list.html
+++ b/templates/core/products/list.html
@@ -1,52 +1,51 @@
 {% extends 'base.html' %}
 {% block content %}
-   <div class="table-container">
-    <br>
-    <h1 class="title">{{ title2 }}</h1>
-    <table class="styled-table">
-      <thead>
-        <tr>
-          <th>Imagen</th>
-          <th>Descripcion</th>
-          <th>Precio</th>
-          <th>Stock</th>
-          <th>Marca</th>
-          <th>Categorias</th>
-          <th>Linea</th>
-          <th>Proveedor</th>
-          <th>Fecha Caducidad</th>
-          <th>Estado</th>
-          <th>Acciones</th>
+<div class="table-container">
+  <br>
+  <h1 class="title">{{ title2 }}</h1>
+  <table class="styled-table">
+    <thead>
+      <tr>
+        <th>Imagen</th>
+        <th>Descripcion</th>
+        <th>Precio</th>
+        <th>Stock</th>
+        <th>Marca</th>
+        <th>Categorias</th>
+        <th>Linea</th>
+        <th>Proveedor</th>
+        <th>Fecha Caducidad</th>
+        <th>Estado</th>
+        <th>Acciones</th>
       </tr>
-      </thead>
-      <tbody>
-        {% for item in products %}
-          <tr>
-          <td><img src={{item.image.url}} alt="" width="50px"> </td>
-          <td>{{item.description}}</td>
-          <td>{{item.price}}</td>
-          <td>{{item.stock}}</td>
-          <td>{{item.brand}}</td>
-          <td>{{item.get_categories}}</td>
-          <td>{{item.get_line_display}}</td>
-          <td>{{item.supplier}}</td>
-          <td>{{item.expiration_date |date:"Y-m-d"}}</td>
-          <td>{% if item.state %}
-               ✔
-              {% else %}
-               ➖
-              {% endif %}
+    </thead>
+    <tbody>
+      {% for item in products %}
+        <tr>
+          <td><img src="{{ item.image.url }}" alt="" width="50px"></td>
+          <td>{{ item.description }}</td>
+          <td>{{ item.price }}</td>
+          <td>{{ item.stock }}</td>
+          <td>{{ item.brand }}</td>
+          <td>{{ item.get_categories }}</td>
+          <td>{{ item.get_line_display }}</td>
+          <td>{{ item.supplier }}</td>
+          <td>{{ item.expiration_date |date:"Y-m-d" }}</td>
+          <td>
+            {% if item.state %}
+              ✔
+            {% else %}
+              ➖
+            {% endif %}
           </td>
           <td>
-            <a href={% url 'core:product_update' item.id %}>✏️</a>
-            <a href={% url 'core:product_delete' item.id %}>❌</a>
-          </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-     <div class="form-group">
-       <a class="btn blue" href={% url 'core:product_create' %}>Nuevo Producto</a>
-     </div>
+            <a href="{% url 'core:product-detail' item.pk %}">✏️</a> <a href="{% url 'core:product-detail' item.pk %}">❌</a> </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  <div class="form-group">
+    <a class="btn blue" href="{% url 'core:product-create' %}">Nuevo Producto</a>
   </div>
-{% endblock content  %}
+</div>
+{% endblock content %}
