config nav - avtive menu solo si user.is_authenticated

--- a/templates/partials/navigation.html
+++ b/templates/partials/navigation.html
@@ -1,22 +1,36 @@
 {% load static %}
-{% with current_url=request.resolver_match.url_name %}
+
 <nav aria-label="Menú principal">
   <ul class="menu" role="menubar">
-    <li role="none" class="{% if current_url == 'home' %}active{% endif %}">
-      <a href="{% url 'home' %}" role="menuitem" aria-current="{% if current_url == 'home' %}page{% endif %}"><i class="fas fa-home"></i> Inicio</a>
+
+    <li role="none" class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}">
+      <a href="{% url 'home' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'home' %}page{% endif %}"><i class="fas fa-home"></i> Inicio</a>
     </li>
-    <li role="none" class="{% if current_url == 'core:product_list' %}active{% endif %}">
-      <a href="{% url 'core:product_list' %}" role="menuitem" aria-current="{% if current_url == 'core:product_list' %}page{% endif %}"><i class="fas fa-box-open" aria-hidden="true"></i> Productos</a>
-    </li>
-    <li role="none" class="{% if current_url == 'core:brand_list' %}active{% endif %}">
-      <a href="{% url 'core:brand_list' %}" role="menuitem" aria-current="{% if current_url == 'core:brand_list' %}page{% endif %}"><i class="fas fa-tags" aria-hidden="true"></i> Marcas</a>
-    </li>
-    <li role="none" class="{% if current_url == 'core:supplier_list' %}active{% endif %}">
-      <a href="{% url 'core:supplier_list' %}" role="menuitem" aria-current="{% if current_url == 'core:supplier_list' %}page{% endif %}"><i class="fas fa-truck" aria-hidden="true"></i> Proveedores</a>
-    </li>
-    <li role="none" class="{% if current_url == 'core:category_list' %}active{% endif %}">
-      <a href="{% url 'core:category_list' %}" role="menuitem" aria-current="{% if current_url == 'core:category_list' %}page{% endif %}"><i class="fas fa-list" aria-hidden="true"></i> Categorías</a>
-    </li>
+
+    {% if user.is_authenticated %}
+      <li role="none" class="{% if request.resolver_match.url_name == 'core:product_list' %}active{% endif %}">
+        <a href="{% url 'core:product_list' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'core:product_list' %}page{% endif %}"><i class="fas fa-box-open" aria-hidden="true"></i> Productos</a>
+      </li>
+      <li role="none" class="{% if request.resolver_match.url_name == 'core:brand_list' %}active{% endif %}">
+        <a href="{% url 'core:brand_list' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'core:brand_list' %}page{% endif %}"><i class="fas fa-tags" aria-hidden="true"></i> Marcas</a>
+      </li>
+      <li role="none" class="{% if request.resolver_match.url_name == 'core:supplier_list' %}active{% endif %}">
+        <a href="{% url 'core:supplier_list' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'core:supplier_list' %}page{% endif %}"><i class="fas fa-truck" aria-hidden="true"></i> Proveedores</a>
+      </li>
+      <li role="none" class="{% if request.resolver_match.url_name == 'core:category_list' %}active{% endif %}">
+        <a href="{% url 'core:category_list' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'core:category_list' %}page{% endif %}"><i class="fas fa-list" aria-hidden="true"></i> Categorías</a>
+      </li>
+      <li role="none" class="{% if request.resolver_match.url_name == 'logout' %}active{% endif %}">
+        <a href="{% url 'home' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'logout' %}page{% endif %}"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
+      </li>
+    {% else %}
+      <li role="none" class="{% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+        <a href="{% url 'login' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'login' %}page{% endif %}"><i class="fas fa-sign-in-alt"></i> Iniciar sesión</a>
+      </li>
+      <li role="none" class="{% if request.resolver_match.url_name == 'signup' %}active{% endif %}">
+        <a href="{% url 'signup' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'signup' %}page{% endif %}"><i class="fas fa-user-plus"></i> Registrarse</a>
+      </li>
+
+    {% endif %}
   </ul>
 </nav>
-{% endwith %}
