icono en list-product

--- a/templates/core/products/list.html
+++ b/templates/core/products/list.html
@@ -50,7 +50,7 @@
         </tbody>
     </table>
     <div class="form-group">
-        <a class="btn blue" href="{% url 'core:product_create' %}">Nuevo Producto</a>
+        <a class="btn blue" href="{% url 'core:product_create' %}"><i class="fas fa-plus"></i> Nuevo Producto</a>
     </div>
 </div>
 
