--- a/templates/partials/navigation.html
+++ b/templates/partials/navigation.html
@@ -2,7 +2,6 @@
 
 <nav aria-label="Menú principal">
   <ul class="menu" role="menubar">
-
     <li role="none" class="{% if request.resolver_match.url_name == 'home' %}active{% endif %}">
       <a href="{% url 'home' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'home' %}page{% endif %}"><i class="fas fa-home"></i> Inicio</a>
     </li>
@@ -21,16 +20,16 @@
         <a href="{% url 'core:category_list' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'core:category_list' %}page{% endif %}"><i class="fas fa-list" aria-hidden="true"></i> Categorías</a>
       </li>
       <li role="none" class="{% if request.resolver_match.url_name == 'logout' %}active{% endif %}">
-        <a href="{% url 'home' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'logout' %}page{% endif %}"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
-      </li>
-    {% else %}
-      <li role="none" class="{% if request.resolver_match.url_name == 'login' %}active{% endif %}">
-        <a href="{% url 'login' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'login' %}page{% endif %}"><i class="fas fa-sign-in-alt"></i> Iniciar sesión</a>
-      </li>
-      <li role="none" class="{% if request.resolver_match.url_name == 'signup' %}active{% endif %}">
-        <a href="{% url 'signup' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'signup' %}page{% endif %}"><i class="fas fa-user-plus"></i> Registrarse</a>
+          <a href="{% url 'logout' %}" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'logout' %}page{% endif %}"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
       </li>
 
+    {% else %}
+      <li role="none" class="{% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+        <a href="{% url 'login' %}" onclick="openModal('login-modal')" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'login' %}page{% endif %}"><i class="fas fa-sign-in-alt"></i> Iniciar sesión</a>
+      </li>
+      <li role="none" class="{% if request.resolver_match.url_name == 'signup' %}active{% endif %}">
+        <a href="{% url 'signup' %}" onclick="openModal('signup-modal')" role="menuitem" aria-current="{% if request.resolver_match.url_name == 'signup' %}page{% endif %}"><i class="fas fa-user-plus"></i> Registrarse</a>
+      </li>
     {% endif %}
   </ul>
 </nav>
