--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-  {{title2}}
-  <h2>Estoy en el home</h2>
-{% endblock content  %}
+{% extends 'base.html' %} {% block content %}
+
+<div class="container">
+  <h1>Home</h1>
+</div>
+
+{% endblock %}
