--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,11 +1,13 @@
-<h1>Signup</h1>
+{% extends 'base.html' %} {% block content %}
 
-{% if error %}
-    <p style="color: red;">{{ error }}</p>
-{% endif %}
+<div class="container">
+  <h1>Signup</h1>
 
-<form method="POST" action="{% url 'signup' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Signup</button>
-</form>
+  {{error}}
+
+  <form action="/signup/" method="POST">
+    {% csrf_token %} {{form.as_p}}
+    <button class="btn btn-primary">Signup</button>
+  </form>
+</div>
+{% endblock %}
