--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,21 +1,22 @@
 {% extends "base.html" %}
-
 {% block content %}
 
 <div class="container">
-<h1>Signin</h1>
+  <div class="form-container">
+    <h1 class="title">Iniciar sesión</h1>
 
-  <p>
-  {{error}}
-  </p>
+      <p>
+      {{error}}
+      </p>
 
-  <form action="/signin/" method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button class="btn btn blue">
-      Signin
-    </button>
-  </form>
+    <form action="/signin/" method="POST">
+      {% csrf_token %}
+      {{form.as_p}}
+      <button class="btn btn-primary">
+        Iniciar sesión
+      </button>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
