--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,13 +1,16 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% block content %}
 
 <div class="container">
-  <h1>Signup</h1>
+  <div class="form-container">
+    <h1 class="title">Registrate</h1>
 
-  {{error}}
+      {{error}}
 
-  <form action="/signup/" method="POST">
-    {% csrf_token %} {{form.as_p}}
-    <button class="btn btn-primary">Signup</button>
-  </form>
+    <form action="/signup/" method="POST">
+      {% csrf_token %} {{form.as_p}}
+      <button class="btn btn-primary">Signup</button>
+    </form>
+  </div>
 </div>
 {% endblock %}
