--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -15,7 +15,7 @@
 }
 
 .btn-primary:hover {
-  background-color: darken(var(--primary-color), 10%);
+  background-color: var(--secondary-color); /* Usamos el color secundario, que ya es más oscuro */
 }
 
 .btn-secondary {
@@ -24,7 +24,7 @@
 }
 
 .btn-secondary:hover {
-  background-color: darken(var(--secondary-color), 10%);
+  filter: brightness(0.8); /* Oscurecemos el fondo en un 20% */
 }
 
 /* Otros estilos para botones específicos */
