Presentacion en home

--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -11,7 +11,7 @@
             <a href="{% url 'core:product_list' %}" class="btn btn-primary">Ver Productos</a>
         </div>
         <div class="hero-image">
-            <img src="{% static 'media/products/coca_cola.jfif' %}" alt="Imagen de productos frescos">
+            <img src="{% static 'media/products/Switch.png' %}" alt="Imagen de productos frescos">
         </div>
     </section>
 
