--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS Base -->
   <link rel="stylesheet" href={% static 'css/base.css' %}>
+  <link rel="stylesheet" href={% static 'css/home.css' %}>
   <!-- layout -->
   <link rel="stylesheet" href={% static 'css/layout/header.css' %}>
   <link rel="stylesheet" href={% static 'css/layout/navigation.css' %}>
