--- a/templates/core/brands/form.html
+++ b/templates/core/brands/form.html
@@ -14,7 +14,7 @@
         {% endfor %}
         <div class="form-group">
             <input type="submit" value="Guardar" class="btn blue">
-            <a href="{% url 'core:brands_list' %}" class="btn red">Cancelar</a>
+            <a href="{% url 'core:brand_list' %}" class="btn red">Cancelar</a>
         </div>
     </form>
   </div>
