--- a/templates/core/suppliers/list.html
+++ b/templates/core/suppliers/list.html
@@ -2,60 +2,58 @@
 {% load static %}
 
 {% block content %}
-
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-
 <div class="table-container">
   <br>
   <h1 class="title">{{ title2 }}</h1>
-  {% if suppliers %}
-  <table class="styled-table">
-    <thead>
-      <tr>
-        <th>Nombre</th>
-        <th>RUC</th>
-        <th>Dirección</th>
-        <th>Teléfono</th>
-        <th>Estado</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for supplier in suppliers %}
-        <tr>
-          <td>{{ supplier.name }}</td>
-          <td>{{ supplier.ruc }}</td>
-          <td>{{ supplier.address }}</td>
-          <td>{{ supplier.phone }}</td>
-          <td>
-            {% if supplier.state %}
-              ✔
-            {% else %}
-              ➖
-            {% endif %}
-          </td>
-          <td>
-            <a href="{% url 'core:supplier_update' supplier.pk %}">✏️</a>
-            <a href="{% url 'core:supplier_delete' supplier.pk %}">❌</a>
-          </td>
-        </tr>
+
+  {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
       {% endfor %}
-    </tbody>
-  </table>
+    </ul>
+  {% endif %}
+
+  {% if suppliers %}
+    <table class="styled-table">
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>RUC</th>
+          <th>Dirección</th>
+          <th>Teléfono</th>
+          <th>Estado</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for supplier in suppliers %}
+          <tr>
+            <td>{{ supplier.name }}</td>
+            <td>{{ supplier.ruc }}</td>
+            <td>{{ supplier.address }}</td>
+            <td>{{ supplier.phone }}</td>
+            <td>
+              {% if supplier.state %}
+                ✔
+              {% else %}
+                ➖
+              {% endif %}
+            </td>
+            <td>
+              <a href="{% url 'core:supplier_update' supplier.pk %}">✏️</a>
+              <a href="{% url 'core:supplier_delete' supplier.pk %}">❌</a>
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   {% else %}
-  <h2 style="display: flex; justify-content: center; color: crimson;">No hay proveedores</h2>
+    <h2 style="display: flex; justify-content: center; color: crimson;">No hay proveedores</h2>
   {% endif %}
 
   <div class="form-group">
-    <a class="btn blue" href="{% url 'core:supplier_create' %}">
-      <i class="fas fa-plus"></i>  Nuevo Proveedor
-    </a>
+    <a class="btn blue" href="{% url 'core:supplier_create' %}"><i class="fas fa-plus"></i> Nuevo Proveedor</a>
   </div>
 </div>
 {% endblock content %}
